# mankeu

./: .gitignore  ANDROID_BUILD.md  README.md  api.md  build-android.sh  docker-compose.yml  package.json  plan.md  setup.sh  tech-stack.md  ui-ux.md
backend/: .dockerignore  .env.example  .gitignore  API.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  drizzle.config.ts  package-lock.json  pyproject.toml  update_schema.py  wrangler.toml
backend/alembic/: env.py
backend/alembic/versions/: 75e1587d0f3a_add_currency_and_locale_to_users.py  7f98e3a2e540_add_goal_id_to_transactions.py  da4db1d0e386_add_profile_fields.py  f599d503d4d6_initial_tables.py
backend/app/: main.py
backend/app/api/: api.py  deps.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  budget.py  category.py  debt.py  fixed_expense.py  income.py  saving.py  transaction.py  user.py
backend/app/schemas/: __init__.py  budget.py  category.py  debt.py  fixed_expense.py  income.py  saving.py  transaction.py  user.py
backend/drizzle/: 0000_short_meteorite.sql  0001_careful_vermin.sql  0002_boring_red_shift.sql  0003_hard_karnak.sql  0004_equal_ser_duncan.sql  0005_familiar_blonde_phantom.sql  0006_wise_rick_jones.sql
backend/drizzle/meta/: 0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  0005_snapshot.json  0006_snapshot.json  _journal.json
backend/scripts/: migrate_accounts.ts
backend/src/: index.ts
backend/src/db/: schema.ts
backend/src/routes/: accounts.ts  categories.ts  debts.ts  savings.ts  transactions.ts  transfers.ts  (+1 more)
(+99 files in other folders)
